syntax = "proto3";

option csharp_namespace = "GrpcChat";

service ChatSync{
	rpc TestHello (TestHelloRequest) returns (TestHelloReply);
	rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse);
}

message CreateRoomRequest{
	int32 roomId = 1;
}
message CreateRoomResponse{
	int32 roomId = 1;
}


message TestHelloRequest{
	string message = 1;
}

message TestHelloReply{
	string reply = 1;
}